      is stored correctly in the database.
    * Install bucket handling now works for collections which were not
      fully installed.
    * A bug where database was left locked on exception during install
      when the download thread was still executing has been fixed.
    * The conaryclient code has been split into pieces.
    * Switched rollbacks to local@local:ROLLBACK

  o Building/Branching changes
    * Many changes have been made to cloning, including sideways
      cloning (creating a clone at the same branch depth as the clone
      source), better cloning with multiple flavors, separate cloning
      of source and binaries, resilience against duplicate troves,
      proper use of existing fileIds during clones, simultaneous
      cloning of multiple troves, and better clonedFrom tracking.

Changes in 0.62.12:
  * Conary will no longer create a "rootroot" group while installing
    users whose primary group is "root".  It will now call the
    appropriate tag handler for user/group modifications if the tag
    handler is installed.
  * EnforceConfigLogBuildRequirements no longer suggests recursive
    build requirements for packages in which the configure script
    checks to see if the package is already installed.
  * Installing new version of pinned troves leaves the pinned trove in
    place if the two troves have compatible install buckets
  * By default, when you shadow a binary trove, its source is shadowed with it.
  * Instead of a --sources option, cvc shadow and cvc branch now take
    --source-only and --binary-only options that allow you to control whether
    sources or binaries are shadowed. 
  * Branch and shadow commands now take an unlimited number of troves
    to branch/shadow.
  * Files sharing versions but with different contents (thanks to flavors)
    got lost when switching from one flavor of a trove to another
  * troves can now be specified for rq, q, and update as <labelpart>/<version>,