@@ -29,6 +29,7 @@ Changes in 0.62.13:
       when the download thread was still executing has been fixed.
     * The conaryclient code has been split into pieces.
     * Switched rollbacks to local@local:ROLLBACK
+    * The download thread failing caused the main thread to block forever
 
   o Building/Branching changes
     * Many changes have been made to cloning, including sideways
